# fastapi-mongodb

./: .env  .gitignore  .pre-commit-config.yaml  .secrets.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose-mongo-auth.yml  docker-compose-mongo.yml  docker-compose.debug.yml  docker-compose.yml  init_config.sh  mypy.ini  pyproject.toml  requirements.txt  settings.toml  update_settings.sh
app/: logging_config.json  main.py
app/database/: db.py
app/models/: models.py  user.py
app/routes/: student.py  user.py
app/schemas/: schemas.py
app/src/: custom_logging.py
docs/: DOCKER_CHEAT_SHEET.md
