[tool.poetry]
name = "fastapi-mongodb"
version = "0.1.0"
description = "FastAPI with MongoDB"
authors = ["Marcelo Facio Palin <palinrp@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^3.12.0"
fastapi = {extras = ["all"], version = "^0.68.1"}
dynaconf = "^3.1.7"
loguru = "^0.5.3"
requests = "^2.26.0"
gunicorn = "^20.1.0"
motor = "^2.5.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = {version = "^21.7b0", allow-prereleases = true}
flake8 = "^3.9.2"
pylint = "^2.9.3"
autoflake = "^1.4"
isort = "^5.9.2"
mypy = "^0.910"
autopep8 = "^1.5.7"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
